revised import to actually work

--- a/nltk_assocrules_pghpython.ipynb
+++ b/nltk_assocrules_pghpython.ipynb
@@ -536,7 +536,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import apriori_pml as ap\n",
+      "import apriori as ap\n",
       "L, support_data = ap.apriori(narrative_4set[:1000], 0.01) # I'm using a subset to shrink runtime\n",
       "rules = ap.generateRules(L, support_data, 0.01)"
      ],
